--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-redux": "^7.1.3",
