--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/currency-formatter": "^1.3.0",
     "@types/jest": "^24.0.0",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/jwt-decode": "^2.2.1",
@@ -23,9 +24,12 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
+    "currency-formatter": "^1.5.5",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-lines-ellipsis": "^0.14.1",
