change endpoint url to https

--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,5 +1,6 @@
 server {
   listen 80;
+  server_name kbucard.com www.kbucard.com;
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
