--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^5.0.15",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-slick": "^0.23.4",
@@ -36,6 +37,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-lines-ellipsis": "^0.14.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
