--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cryptr": "^4.0.0",
     "@types/currency-formatter": "^1.3.0",
     "@types/jest": "^24.0.0",
     "@types/jsonwebtoken": "^8.3.5",
@@ -29,7 +31,9 @@
     "@types/styled-components": "^4.4.2",
     "axios": "^0.19.1",
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^3.0.8",
     "bootstrap": "^4.4.1",
+    "cryptr": "^6.0.1",
     "currency-formatter": "^1.5.5",
     "date-fns": "^2.9.0",
     "jsonwebtoken": "^8.5.1",
