--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "성서봇",
+  "name": "성서봇",
   "icons": [
     {
-      "src": "/images/icons-512.png",
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "icon512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
