--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "donggyu bot",
-  "name": "donggyu bot",
+  "short_name": "bible bot",
+  "name": "bible bot",
   "icons": [
     {
       "src": "favicon.ico",
