--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,11 @@
       "type": "image/x-icon"
     },
     {
+      "src": "icon-64.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
       "src": "icon-256.png",
       "type": "image/png",
       "sizes": "256x256"
