--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,11 @@
       "src": "icon-256.png",
       "type": "image/png",
       "sizes": "256x256"
+    },
+    {
+      "src": "icon512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "lang": "en-US",
