--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,16 @@
       "sizes": "256x256"
     },
     {
+      "src": "icon-128.png",
+      "type": "image/png",
+      "sizes": "128x128"
+    },
+    {
+      "src": "icon-64.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
       "src": "icon512.png",
       "type": "image/png",
       "sizes": "512x512"
